--- a/src/app/series/serie-listar/serie-listar.component.html
+++ b/src/app/series/serie-listar/serie-listar.component.html
@@ -1,28 +1,103 @@
-<h1>Listado de Series</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Lista de Series</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <style>
+        body {
+            background-color: #131313; 
+            color: #fff; 
+            font-family: 'Arial', sans-serif;
+        }
+        h3 {
+            margin-top: 20px;
+            margin-bottom: 20px;
+            color: #fff; 
+            text-align: center;
+            font-size: 2.5em;
+        }
+       .card {
+            background-color: #464646; 
+            border: 1px solid #87CEEB; 
+            border-radius: 12px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s;
+            margin-bottom: 20px;
+        }
+       .card:hover {
+            transform: translateY(-13px);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+        }
+       .card-body {
+            padding: 20px;
+        }
+       .btn-primary {
+            background-color: #87CEEB; 
+            border-color: #87CEEB; 
+            transition: background-color 0.3s ease, border-color 0.3s ease;
+        }
+       .btn-primary:hover {
+            background-color: #0056b3; 
+            border-color: #0056b3; 
+        }
+       .btn-primary:focus {
+            box-shadow: 0 0 8px rgba(0, 123, 255, 0.6); 
+        }
+        .card-title {
+            color: #007bff; 
+            font-size: 1.5em;
+            font-weight: bold;
+        }
+        .card-text {
+            color: #555; 
+        }
+        .image-container {
+            width: 100%; 
+            height: 300px; 
+            overflow: hidden; 
+            display: flex; 
+            justify-content: center; 
+            align-items: center; 
+        }
+        
+        .card-img-top {
+            width: auto; 
+            height: 100%; 
+            display: block;
+            object-fit: cover; 
+        }
+    </style>
+</head>
+<body>
 
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th>ID</th>
-      <th>Nombre</th>
-      <th>Género</th>
-      <th>Duración</th>
-      <th>País</th>
-      <th>Fecha de estreno</th>
-      <th>Acciones</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr *ngFor="let serie of series">
-      <td>{{ serie.idSeries }}</td>
-      <td>{{ serie.nombre }}</td>
-      <td>{{ serie.genero }}</td>
-      <td>{{ serie.duracion }} minutos</td>
-      <td>{{ serie.pais }}</td>
-      <td>{{ serie.f_estreno }}</td>
-      <td>
-        <button class="btn btn-primary" (click)="onEditarNavigate(serie.idSeries)">Editar</button>
-        <button class="btn btn-danger">Eliminar</button> </td>
-    </tr>
-  </tbody>
-</table>
+    <div class="container-fluid">
+        <h3><strong>Lista de Series</strong></h3>
+        <div class="row">
+            
+            <div class="col-md-4" *ngFor="let s of series">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ s.nombre }}</h5>
+                        <div class="image-container items-center">
+                            <img class="card-img-top" [src]="s.poster" alt="Imagen de {{ s.nombre }}">
+                        </div>
+                        <p class="card-text"><strong>Duración:</strong> {{ s.duracion }}</p>
+                        <p class="card-text"><strong>Género:</strong> {{ s.genero }}</p>
+                        <p class="card-text"><strong>Fecha de Estreno:</strong> {{ s.f_estreno }}</p>
+                        <p class="card-text"><strong>País:</strong> {{ s.pais }}</p>
+                        <button type="button" class="btn btn-primary" (click)="editarSerie(s.id)" title="Editar">Editar</button>
+                    
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+</body>
+</html>
