--- a/src/app/series/series-eliminar/series-eliminar.component.html
+++ b/src/app/series/series-eliminar/series-eliminar.component.html
@@ -10,5 +10,5 @@
   </div>
 
   <button type="submit" class="btn btn-danger">Eliminar Serie</button>
-  <a class="btn btn-secondary" [routerLink]="['/serie']">Cancelar</a>
+  <!--<a class="btn btn-secondary" [routerLink]="['/serie']">Cancelar</a>-->
 </form>
