--- a/src/styles.css
+++ b/src/styles.css
@@ -3,8 +3,8 @@
 body {
     font-family: Arial, sans-serif;
     margin: 0;
-    background-color: #121212;
-    color: #ffffff;
+    background-color: #000000;
+    color: #000000;
     }
     
     .main {
