se corrigio diseño

--- a/src/app/peliculas/peliculas-listar/peliculas-listar.component.html
+++ b/src/app/peliculas/peliculas-listar/peliculas-listar.component.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <style>
         body {
-            background-color: #131313; /* Fondo azul claro */
+            background-color: #ffffff; /* Fondo azul claro */
             color: #fff; /* Texto en blanco */
             font-family: 'Arial', sans-serif;
         }
@@ -45,7 +45,7 @@
             box-shadow: 0 0 8px rgba(0, 123, 255, 0.6); /* Sombra azul */
         }
        .card-title {
-            color: #fff; /* Blanco */
+            color: #87CEEB; /* Blanco */
             font-size: 1.5em;
             font-weight: bold;
         }
