--- a/src/app/series/serie-listar/serie-listar.component.html
+++ b/src/app/series/serie-listar/serie-listar.component.html
@@ -6,20 +6,20 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <style>
         body {
-            background-color: #131313; 
+            background-color: #ffffff; 
             color: #fff; 
             font-family: 'Arial', sans-serif;
         }
         h3 {
             margin-top: 20px;
             margin-bottom: 20px;
-            color: #fff; 
+            color: #ccc; 
             text-align: center;
             font-size: 2.5em;
         }
        .card {
-            background-color: #464646; 
-            border: 1px solid #87CEEB; 
+            background-color: #4d4d4d; 
+            border: 1px solid #a5a5a5; 
             border-radius: 12px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s;
@@ -45,12 +45,12 @@
             box-shadow: 0 0 8px rgba(0, 123, 255, 0.6); 
         }
         .card-title {
-            color: #007bff; 
+            color: #87CEEB; 
             font-size: 1.5em;
             font-weight: bold;
         }
         .card-text {
-            color: #555; 
+            color: #ccc; 
         }
         .image-container {
             width: 100%; 
