--- a/src/app/actores/listar-actor/listar-actor.component.html
+++ b/src/app/actores/listar-actor/listar-actor.component.html
@@ -16,7 +16,7 @@
           <td>{{ actor.idActor }}</td>
           <td>{{ actor.nombre }}</td>
           <td>{{ actor.nacionalidad }}</td>
-          <td>{{ actor.f_nacimiento | date }}</td>
+          <td>{{ actor.f_nacimiento }}</td>
           <td>{{ actor.biografia }}</td>
           <td>
             <button (click)="onEditarNavigate(actor.idActor)" class="btn btn-primary">Editar</button>
