--- a/src/app/series/serie-listar/serie-listar.component.html
+++ b/src/app/series/serie-listar/serie-listar.component.html
@@ -6,20 +6,20 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <style>
         body {
-            background-color: #ffffff; 
+            background-color: #eeebe6; 
             color: #fff; 
             font-family: 'Arial', sans-serif;
         }
         h3 {
             margin-top: 20px;
             margin-bottom: 20px;
-            color: #ccc; 
+            color: #2b221f; 
             text-align: center;
             font-size: 2.5em;
         }
        .card {
-            background-color: #4d4d4d; 
-            border: 1px solid #a5a5a5; 
+            background-color: #52423c; 
+            border: 1px solid #be9251; 
             border-radius: 12px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s;
@@ -33,19 +33,19 @@
             padding: 20px;
         }
        .btn-primary {
-            background-color: #87CEEB; 
-            border-color: #87CEEB; 
+            background-color: #d9c598; 
+            border-color: #be9251; 
             transition: background-color 0.3s ease, border-color 0.3s ease;
         }
        .btn-primary:hover {
-            background-color: #0056b3; 
-            border-color: #0056b3; 
+            background-color: #ccac75; 
+            border-color: #be9251; 
         }
        .btn-primary:focus {
             box-shadow: 0 0 8px rgba(0, 123, 255, 0.6); 
         }
         .card-title {
-            color: #87CEEB; 
+            color: #f8f6f4; 
             font-size: 1.5em;
             font-weight: bold;
         }
