--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <style>
     .navbar {
-      background-color: #1c1c1e; /* Dark background */
+      background-color: #2b221f; 
     }
     .navbar-brand {
       color: #ffffff;
@@ -17,22 +17,22 @@
       color: #ffffff;
     }
     .navbar-nav .nav-link {
-      color: #f8f9fa;
+      color: f8f9fa;
       font-size: 1.1em;
     }
     .navbar-nav .nav-link:hover {
       color: #797979;
     }
     .dropdown-menu {
-      background-color: #1c1c1e;
+      background-color: #c7baaa;
       border: none;
     }
     .dropdown-menu .dropdown-item {
       color: #616161;
     }
     .dropdown-menu .dropdown-item:hover {
-      background-color: #2c2c2e;
-      color: #ffffff;
+      background-color: #7a6154;
+      color: #eeebe6;
     }
     .container-fluid {
       margin-top: 20px;
