--- a/src/app/peliculas/peliculas-listar/peliculas-listar.component.html
+++ b/src/app/peliculas/peliculas-listar/peliculas-listar.component.html
@@ -2,25 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Lista de Series</title>
+    <title>Lista de Peliculas</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <style>
         body {
-            background-color: #ffffff; /* Fondo azul claro */
-            color: #fff; /* Texto en blanco */
+            background-color: #eeebe6; 
+            color: #fff; 
             font-family: 'Arial', sans-serif;
         }
         h3 {
             margin-top: 20px;
             margin-bottom: 20px;
-            color: #fff; /* Blanco */
+            color: #2b221f; 
             text-align: center;
             font-size: 2.5em;
         }
        .card {
-            background-color: #464646; /* Fondo blanco */
-            border: 1px solid #87CEEB; /* Borde azul claro */
-            border-radius: 12px;
+            background-color: #52423c; 
+            border: 1px solid #be9251; 
+            border-radius: 15px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s;
             margin-bottom: 20px;
@@ -33,39 +33,39 @@
             padding: 20px;
         }
        .btn-primary {
-            background-color: #87CEEB; /* Azul claro */
-            border-color: #87CEEB; /* Azul claro */
+            background-color: #d9c598; 
+            border-color: #be9251; 
             transition: background-color 0.3s ease, border-color 0.3s ease;
         }
        .btn-primary:hover {
-            background-color: #0056b3; /* Azul más oscuro al pasar el cursor */
-            border-color: #0056b3; /* Azul más oscuro */
+            background-color: #ccac75; 
+            border-color: #be9251; 
         }
        .btn-primary:focus {
             box-shadow: 0 0 8px rgba(0, 123, 255, 0.6); /* Sombra azul */
         }
        .card-title {
-            color: #87CEEB; /* Blanco */
+            color: #f8f6f4;
             font-size: 1.5em;
             font-weight: bold;
         }
        .card-text {
-            color: #ccc; /* Texto gris claro */
+            color: #f8f6f4; 
         }
        .image-container {
-            width: 100%; /* Establece el ancho del contenedor */
-            height: 300px; /* Establece la altura deseada */
-            overflow: hidden; /* Evita que las imágenes desborden el contenedor */
-            display: flex; /* Utiliza Flexbox para alinear elementos */
-            justify-content: center; /* Centra horizontalmente las imágenes */
-            align-items: center; /* Centra verticalmente las imágenes */
+            width: 100%; 
+            height: 300px; 
+            overflow: hidden; 
+            display: flex; 
+            justify-content: center; 
+            align-items: center; 
         }
         
        .card-img-top {
-            width: auto; /* Establece el ancho de la imagen para que se ajuste al contenedor */
-            height: 100%; /* Establece la altura de la imagen para que se ajuste al contenedor */
-            display: block; /* Elimina el espacio adicional debajo de las imágenes */
-            object-fit: cover; /* Escala la imagen para que se ajuste al contenedor sin distorsión, cubriendo el área visible */
+            width: auto; 
+            height: 100%; 
+            display: block;
+            object-fit: cover; 
         }
     </style>
 </head>
